--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "generate-react-cli": "^7.0.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-table-next": "^4.0.3",
@@ -27,8 +28,10 @@
     "react-dom": "^17.0.2",
     "react-notification-alert": "0.0.13",
     "react-popupbox": "^2.0.8",
+    "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
+    "redux-form": "^8.3.7",
     "toastr": "^2.1.4",
     "web-vitals": "^1.1.2"
   },
