--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "redux-form": "^8.3.7",
+    "redux-thunk": "^2.3.0",
     "toastr": "^2.1.4",
     "web-vitals": "^1.1.2"
   },
